--- a/package.json
+++ b/package.json
@@ -2,24 +2,34 @@
   "name": "FunWithWebsockets",
   "version": "1.0.0",
   "description": "",
-  "main": "santa_class.js",
+  "main": "./RedNose/back/proxy.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node RedNose/back/proxy.js",
+    "proxy": "nodemon RedNose/back/proxy.js",
+    "server": "nodemon RedNose/back/server.js",
+    "dev": "concurrently \"npm run proxy\" \"npm run server\""
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AyoMax/FunWithWebsockets.git"
   },
-  "keywords": [],
+  "keywords": [
+    "stream",
+    "ayomax-stream"
+  ],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/AyoMax/FunWithWebsockets/issues"
   },
   "homepage": "https://github.com/AyoMax/FunWithWebsockets#readme",
+  "devDependencies": {
+    "nodemon": "2.0.3"
+  },
   "dependencies": {
+    "concurrently": "^4.1.1",
     "express": "^4.17.1",
-    "socket.io": "^4.4.0"
+    "http-proxy": "^1.18.1",
+    "socket.io": "^2.4.0"
   }
 }
