--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./RedNose/back/proxy.js",
   "scripts": {
-    "start": "node RedNose/back/proxy.js",
+    "start": "node RedNose/back/proxy.js | node RedNose/back/server.js",
     "proxy": "nodemon RedNose/back/proxy.js",
     "server": "nodemon RedNose/back/server.js",
     "dev": "concurrently \"npm run proxy\" \"npm run server\""
